--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
 
 
 <!-- work project section starts -->
-<section class="work" id="work">
+<!-- <section class="work" id="work">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
   <div class="box-container">
 
     <div class="box tilt">
-      <!-- <img draggable="false" src="./assets/images/projects/portfolio.png" alt="" /> -->
+      <img draggable="false" src="./assets/images/projects/portfolio.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Fill projects here</h3>
@@ -304,14 +304,14 @@
         <div class="desc">
           <p>description</p>
           <div class="btns">
-            <!-- <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a> -->
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
     <div class="box tilt">
-      <!-- <img draggable="false" src="./assets/images/projects/aicma.png" alt="" /> -->
+      <img draggable="false" src="./assets/images/projects/aicma.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Fill projects</h3>
@@ -319,14 +319,14 @@
         <div class="desc">
           <p>description</p>
           <div class="btns">
-            <!-- <a href="https://aicma.co.in/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a> -->
+            <a href="https://aicma.co.in/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
     <div class="box tilt">
-      <!-- <img draggable="false" src="./assets/images/projects/moderntek.png" alt="" /> -->
+      <img draggable="false" src="./assets/images/projects/moderntek.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Fill projects</h3>
@@ -334,14 +334,14 @@
         <div class="desc">
           <p>description</p>
           <div class="btns">
-            <!-- <a href="https://moderntek.co.in/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a> -->
+            <a href="https://moderntek.co.in/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
     <div class="box tilt">
-      <!-- <img draggable="false" src="./assets/images/projects/deeniyat.png" alt="" /> -->
+      <img draggable="false" src="./assets/images/projects/deeniyat.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Fill projects</h3>
@@ -349,14 +349,14 @@
         <div class="desc">
           <p>description</p>
           <div class="btns">
-            <!-- <a href="https://www.deeniyatrugs.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a> -->
+            <a href="https://www.deeniyatrugs.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
     </div>
     <div class="box tilt">
-      <!-- <img draggable="false" src="./assets/images/projects/ayub.png" alt="" /> -->
+      <img draggable="false" src="./assets/images/projects/ayub.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Fill projects</h3>
@@ -364,8 +364,8 @@
         <div class="desc">
           <p>description</p>
           <div class="btns">
-            <!-- <a href="https://ayubrugs.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a> -->
+            <a href="https://ayubrugs.com/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -373,7 +373,7 @@
 
 </div>
 
-</section>
+</section> -->
 <!-- work project section ends -->
 
 <!-- experience section starts -->
